# webvfx

./: .gitignore  CMakeLists.txt  README.md
mlt/: factory.cpp  service_manager.cpp  service_manager.h  webvfx_filter.cpp
server/: binding.gyp  ipc.cc  server.js
webvfx/: content.h  effects.h  effects_impl.cpp  effects_impl.h  parameters.cpp  parameters.h  webvfx.cpp  webvfx.h
